modify the makefile

--- a/standalone/Makefile
+++ b/standalone/Makefile
@@ -1,4 +1,28 @@
+CC = nvcc
 
-all: 
-	mkdir -p build
-	nvcc -o build/test test.cu -I include -I prims
+CFLAGS = 
+
+INCLUDE = -I include -I prims
+
+# Source files
+SOURCES = test.cu
+
+BUILDDIR = build
+
+OBJECTS = $(BUILDDIR)/$(SOURCES:.cu=.o)
+
+
+EXE = $(BUILDDIR)/test
+
+all: $(EXE)
+
+$(OBJECTS): $(SOURCES)
+	mkdir -p $(BUILDDIR)
+	$(CC) $(CFLAGS) $(INCLUDE) -c $< -o $@
+
+$(EXE): $(OBJECTS)
+	$(CC) $(CFLAGS) $^ -o $@
+
+# Clean up
+clean:
+	rm -f $(OBJECTS) $(EXE)
