we need to configure ncclDevChannelPeer in kernel

--- a/standalone/Makefile
+++ b/standalone/Makefile
@@ -11,8 +11,7 @@ BUILDDIR = build
 
 OBJECTS = $(BUILDDIR)/$(SOURCES:.cu=.o)
 
-
-EXE = $(BUILDDIR)/test
+EXE = $(BUILDDIR)/$(SOURCES:.cu=)
 
 all: $(EXE)
 
