adding more tests

--- a/standalone/Makefile
+++ b/standalone/Makefile
@@ -1,26 +1,37 @@
 NVCC = nvcc
 
-CFLAGS = 
+NVCUFLAGS = 
+ifeq ($(MPI), 1)
+NVCUFLAGS += -DMPI_SUPPORT -I$(MPI_HOME)/include
+NVLDFLAGS += -L$(MPI_HOME)/lib -L$(MPI_HOME)/lib64 -lmpi
+endif
+
 
 INCLUDE = -I include -I prims
 
 # Source files
-SOURCES = test.cu
+ifeq ($(MPI), 1)
+SOURCES := test_mpi.cu test_single.cu
+else
+SOURCES := test_single.cu
+endif
+
 
 BUILDDIR = build
 
-OBJECTS = $(BUILDDIR)/$(SOURCES:.cu=.o)
+OBJECTS = $(SOURCES:%.cu=$(BUILDDIR)/%.o)
 
-EXE = $(BUILDDIR)/$(SOURCES:.cu=)
+EXE = $(BUILDDIR)/$(SOURCES:.cu=_perf)
 
-all: $(EXE)
 
-$(OBJECTS): $(SOURCES)
+all: $(OBJECTS)
+
+$(BUILDDIR)/%.o: %.cu
 	mkdir -p $(BUILDDIR)
-	$(NVCC) $(CFLAGS) $(INCLUDE) -c $< -o $@
+	$(NVCC) $(NVCUFLAGS) $(INCLUDE) -c $< -o $@
 
-$(EXE): $(OBJECTS)
-	$(NVCC) $(CFLAGS) $^ -o $@
+${BUILDDIR}/%_perf:${BUILDDIR}/%.o
+	$(NVCC) $(NVLDFLAGS) $^ -o $@
 
 # Clean up
 clean:
