add required files

--- a/standalone/Makefile
+++ b/standalone/Makefile
@@ -10,23 +10,32 @@ endif
 INCLUDE = -I include -I prims
 
 # unit test source files
-USRC = unittest/test_mpi.cu unittest/test_simple.cu unittest/test_ll.cu #unittest/test_ib.cu
+UNITTESTSRC = unittest/test_mpi.cu unittest/test_simple.cu unittest/test_ll.cu unittest/test_ib.cu
+# UNITTESTSRC = unittest/test_simple.cu
+LIBSRC = debug.cc misc/ibvwrap.cc socket.cc
 
 BUILDDIR = build
 
-OBJECTS = $(USRC:%.cu=$(BUILDDIR)/%.o)
+OBJECTS = $(UNITTESTSRC:%.cu=$(BUILDDIR)/%.o)
 
-EXE = $(USRC:%.cu=$(BUILDDIR)/%_perf)
+EXE = $(UNITTESTSRC:%.cu=$(BUILDDIR)/%_perf)
 
+LIBOBJ = $(LIBSRC:%.cc=$(BUILDDIR)/%.o)
 
 all: $(EXE)
 
-$(BUILDDIR)/unittest/%.o: unittest/%.cu
+$(BUILDDIR)/unittest/%.o: unittest/%.cu 
 	mkdir -p $(BUILDDIR)/unittest
 	$(NVCC) $(NVCUFLAGS) $(INCLUDE) -c $< -o $@
 
+# $(BUILDDIR)/%.o: %.cc
+# 	mkdir -p $(BUILDDIR)
+# 	$(NVCC) $(NVCUFLAGS) $(INCLUDE) -c $< -o $@
+
 ${BUILDDIR}/unittest/%_perf:${BUILDDIR}/unittest/%.o
 	$(NVCC) $(NVLDFLAGS) $^ -o $@
+
+
 
 # Clean up
 clean:
