--- a/standalone/Makefile
+++ b/standalone/Makefile
@@ -12,31 +12,33 @@ INCLUDE = -I include -I prims
 # unit test source files
 UNITTESTSRC = unittest/test_mpi.cu unittest/test_simple.cu unittest/test_ll.cu unittest/test_ib.cu
 # UNITTESTSRC = unittest/test_simple.cu
-LIBSRC = debug.cc misc/ibvwrap.cc socket.cc
+LIBSRC = debug.cc misc/ibvwrap.cc misc/socket.cc misc/utils.cc misc/nvmlwrap.cc misc/param.cc
 
 BUILDDIR = build
 
-OBJECTS = $(UNITTESTSRC:%.cu=$(BUILDDIR)/%.o)
 
-EXE = $(UNITTESTSRC:%.cu=$(BUILDDIR)/%_perf)
+UNITTEST = $(UNITTESTSRC:%.cu=$(BUILDDIR)/%_perf)
 
-LIBOBJ = $(LIBSRC:%.cc=$(BUILDDIR)/%.o)
+LIBOBJ := $(LIBSRC:%.cc=$(BUILDDIR)/%.o)
+UNITTESTOBJ := $(UNITTESTSRC:%.cu=$(BUILDDIR)/%.o)
 
-all: $(EXE)
+all: $(UNITTEST)
+
+$(UBIN): %: %.o $(LIBOBJ)
+	mkdir -p $(BUILDDIR)/unittest
+	$(NVCC) $(NVLDFLAGS) $^ -o $@
 
 $(BUILDDIR)/unittest/%.o: unittest/%.cu 
 	mkdir -p $(BUILDDIR)/unittest
 	$(NVCC) $(NVCUFLAGS) $(INCLUDE) -c $< -o $@
 
-# $(BUILDDIR)/%.o: %.cc
-# 	mkdir -p $(BUILDDIR)
-# 	$(NVCC) $(NVCUFLAGS) $(INCLUDE) -c $< -o $@
+$(LIBOBJ): $(BUILDDIR)/%.o: %.cc
+	mkdir -p $(BUILDDIR)/misc
+	$(NVCC) $(NVCUFLAGS) $(INCLUDE) -c $< -o $@
 
-${BUILDDIR}/unittest/%_perf:${BUILDDIR}/unittest/%.o
+${BUILDDIR}/unittest/%_perf:${BUILDDIR}/unittest/%.o $(LIBOBJ)
 	$(NVCC) $(NVLDFLAGS) $^ -o $@
-
-
 
 # Clean up
 clean:
-	rm -f $(OBJECTS) $(EXE)
+	rm -f $(OBJECTS) $(UNITTEST)
