set IB's socket blocking

--- a/standalone/Makefile
+++ b/standalone/Makefile
@@ -9,7 +9,7 @@ endif
 INCLUDE = -I include -I prims
 
 # unit test source files
-UNITTESTSRC = unittest/test_mpi.cu unittest/test_simple.cu unittest/test_ll.cu unittest/test_ll128.cu unittest/test_ib_mpi.cu
+UNITTESTSRC = unittest/test_mpi.cu unittest/test_simple.cu unittest/test_ll.cu unittest/test_ll128.cu unittest/test_ib_mpi.cu unittest/test_simple_direct.cu
 
 LIBSRC = debug.cc misc/ibvwrap.cc misc/socket.cc misc/utils.cc misc/nvmlwrap.cc misc/param.cc
 
